--- a/css/Productos.css
+++ b/css/Productos.css
@@ -39,7 +39,7 @@ header {
 .container {
     display: grid;
     grid-template-rows: repeat(3, 1fr);
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat( auto-fit, minmax(250px, 1fr) );
     column-gap: 30px;
     row-gap: 50px;
     margin-top: 100px;
@@ -123,4 +123,24 @@ button:hover{
     border-radius: 10px;
     margin-left: 20px;
     padding: 10px;
+}
+
+/* hacer con mediaquerys que cuando se haga pequeño el tamaño categorias se mantenga y el section se ponga debajo */
+
+@media categ{
+    .categorias{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        position: absolute;
+        align-items: start;
+        row-gap: 20px;
+        margin-top: 150px;
+        margin-bottom: 50px;
+        border: #d83232 1px solid;
+        background-color: #b2eaf4;
+        border-radius: 10px;
+        margin-left: 20px;
+        padding: 10px;
+    }
 }
