--- a/css/inicio.css
+++ b/css/inicio.css
@@ -12,7 +12,9 @@
 body{
     font-family: 'Poppins', sans-serif;
 }
-
+.header h2{
+    color: white;
+}
 .container {
     
     max-width: 1200px;
